# k3s-playground

./: README.md  flake.nix  hello-cloud-native.cabal  treefmt.nix
app/: Main.hs
doc/: build.md  manifest.md  memo.md
manifests/: deployment.yaml  service.yaml
