cabal-version:      3.0
name:               hello-cloud-native
version:            0.1.0.0
synopsis:           Hello, Cloud Native! を JSON で返すだけのバックエンド
build-type:         Simple

executable hello-cloud-native
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        base,
        aeson,
        http-types,
        text,
        unix,
        wai,
        warp

    default-language: GHC2021
    ghc-options:      -Wall -threaded -rtsopts "-with-rtsopts=-N"
